reorganizing the repo

--- a/Task01_Binder_HTPG.ipynb
+++ b/Task01_Binder_HTPG.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "e4ad7164",
    "metadata": {},
    "outputs": [],
@@ -29,19 +29,19 @@
     "import numpy as np\n",
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt\n",
-    "from Statistical_Analysis import Tukey_Grouping\n",
+    "from scripts.Statistical_Analysis import Tukey_Grouping\n",
     "from scipy.stats import ttest_ind, t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "54d665b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# User input variables. \n",
-    "MainDataFileName = './Data/Data.xlsx'\n",
+    "MainDataFileName = './data/Data.xlsx'\n",
     "OutputDir        = '../_Figures'"
    ]
   },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "a1f02f36",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "4     2     0-Month       NaN  7197       2  80.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "1b50e6ff",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "4     3      0-Month  77.400000  0.432049         3  77.0,77.2,78.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "7cd38e59",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "b98d6ac7",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "916b4237",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "9   L10         B,F,H                  F"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "3f974acb",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "bfee0dd9",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "336badb2",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "e7a20c3d",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "c3403108",
    "metadata": {},
    "outputs": [],
