--- a/Task02_Binder_MSCR.ipynb
+++ b/Task02_Binder_MSCR.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "539ca278",
    "metadata": {},
    "outputs": [],
@@ -29,19 +29,19 @@
     "import numpy as np\n",
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt\n",
-    "from Statistical_Analysis import Tukey_Grouping\n",
+    "from scripts.Statistical_Analysis import Tukey_Grouping\n",
     "from scipy.stats import ttest_ind, t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "3de54785",
    "metadata": {},
    "outputs": [],
    "source": [
     "# User input variables. \n",
-    "MainDataFileName = './Data/Data.xlsx'\n",
+    "MainDataFileName = './data/Data.xlsx'\n",
     "OutputDir        = '../_Figures'"
    ]
   },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "fe72395d",
    "metadata": {},
    "outputs": [
@@ -181,22 +181,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   Lane Field_Aging Lab_Aging    ID  RepNum  Temperature   R0.1   R3.2  \\\n",
-       "0     1     0-Month       NaN  7196       1           64  42.96  36.71   \n",
-       "1     1     0-Month       NaN  7196       2           64  42.96  36.73   \n",
-       "2     1     0-Month       NaN  7196       3           64  43.04  36.72   \n",
-       "3     2     0-Month       NaN  7197       1           64  42.22  34.44   \n",
-       "4     2     0-Month       NaN  7197       2           64  42.46  34.52   \n",
+       "   Lane Field_Aging Lab_Aging    ID  ...  Jnr0.1  Jnr3.2    Jnrdiff  TrafficGrade\n",
+       "0     1     0-Month       NaN  7196  ...  0.1889  0.2111  11.752250             E\n",
+       "1     1     0-Month       NaN  7196  ...  0.1869  0.2088  11.717496             E\n",
+       "2     1     0-Month       NaN  7196  ...  0.1886  0.2114  12.089077             E\n",
+       "3     2     0-Month       NaN  7197  ...  0.2432  0.2797  15.008224             E\n",
+       "4     2     0-Month       NaN  7197  ...  0.2480  0.2864  15.483871             E\n",
        "\n",
-       "       Rdiff  Jnr0.1  Jnr3.2    Jnrdiff TrafficGrade  \n",
-       "0  14.548417  0.1889  0.2111  11.752250            E  \n",
-       "1  14.501862  0.1869  0.2088  11.717496            E  \n",
-       "2  14.684015  0.1886  0.2114  12.089077            E  \n",
-       "3  18.427286  0.2432  0.2797  15.008224            E  \n",
-       "4  18.699953  0.2480  0.2864  15.483871            E  "
+       "[5 rows x 13 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "615ea495",
    "metadata": {},
    "outputs": [
@@ -250,7 +245,7 @@
        "      <th>R3.2_Std</th>\n",
        "      <th>R3.2_Values</th>\n",
        "      <th>Rdiff_Mean</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Rdiff_Std</th>\n",
        "      <th>Rdiff_Values</th>\n",
        "      <th>Jnr0.1_Mean</th>\n",
        "      <th>Jnr0.1_Std</th>\n",
@@ -276,7 +271,7 @@
        "      <td>0.008165</td>\n",
        "      <td>36.71,36.73,36.72</td>\n",
        "      <td>14.578098</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0.077268</td>\n",
        "      <td>14.548417,14.501862,14.684015</td>\n",
        "      <td>0.188133</td>\n",
        "      <td>0.000881</td>\n",
@@ -300,7 +295,7 @@
        "      <td>0.149666</td>\n",
        "      <td>27.7,27.82,28.06</td>\n",
        "      <td>34.530254</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0.426120</td>\n",
        "      <td>34.961259,34.679502,33.95</td>\n",
        "      <td>0.640900</td>\n",
        "      <td>0.006730</td>\n",
@@ -324,7 +319,7 @@
        "      <td>0.037712</td>\n",
        "      <td>34.44,34.52,34.52</td>\n",
        "      <td>18.525837</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0.123476</td>\n",
        "      <td>18.427286,18.699953,18.450272</td>\n",
        "      <td>0.243967</td>\n",
        "      <td>0.003029</td>\n",
@@ -348,7 +343,7 @@
        "      <td>0.824958</td>\n",
        "      <td>5.38,5.38,7.13</td>\n",
        "      <td>61.429316</td>\n",
-       "      <td>...</td>\n",
+       "      <td>5.253716</td>\n",
        "      <td>65.223012,65.064935,54.0</td>\n",
        "      <td>1.254500</td>\n",
        "      <td>0.003822</td>\n",
@@ -372,7 +367,7 @@
        "      <td>0.028674</td>\n",
        "      <td>10.97,10.9,10.93</td>\n",
        "      <td>41.111557</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0.261264</td>\n",
        "      <td>41.43086,41.112912,40.790899</td>\n",
        "      <td>0.386667</td>\n",
        "      <td>0.008511</td>\n",
@@ -386,49 +381,20 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Lane  Field_Aging  Num_Data  R0.1_Mean  R0.1_Std        R0.1_Values  \\\n",
-       "0     1      0-Month         3  42.986667  0.037712  42.96,42.96,43.04   \n",
-       "1     1  Tank binder         3  42.553333  0.051854  42.59,42.59,42.48   \n",
-       "2     2      0-Month         3  42.336667  0.098093  42.22,42.46,42.33   \n",
-       "3     2  Tank binder         3  15.453333  0.038586   15.47,15.4,15.49   \n",
-       "4     3      0-Month         3  18.566667  0.117284  18.73,18.51,18.46   \n",
-       "\n",
-       "   R3.2_Mean  R3.2_Std        R3.2_Values  Rdiff_Mean  ...  \\\n",
-       "0  36.720000  0.008165  36.71,36.73,36.72   14.578098  ...   \n",
-       "1  27.860000  0.149666   27.7,27.82,28.06   34.530254  ...   \n",
-       "2  34.493333  0.037712  34.44,34.52,34.52   18.525837  ...   \n",
-       "3   5.963333  0.824958     5.38,5.38,7.13   61.429316  ...   \n",
-       "4  10.933333  0.028674   10.97,10.9,10.93   41.111557  ...   \n",
-       "\n",
-       "                    Rdiff_Values Jnr0.1_Mean  Jnr0.1_Std  \\\n",
-       "0  14.548417,14.501862,14.684015    0.188133    0.000881   \n",
-       "1      34.961259,34.679502,33.95    0.640900    0.006730   \n",
-       "2  18.427286,18.699953,18.450272    0.243967    0.003029   \n",
-       "3       65.223012,65.064935,54.0    1.254500    0.003822   \n",
-       "4   41.43086,41.112912,40.790899    0.386667    0.008511   \n",
-       "\n",
-       "          Jnr0.1_Values Jnr3.2_Mean  Jnr3.2_Std         Jnr3.2_Values  \\\n",
-       "0  0.1889,0.1869,0.1886    0.210433    0.001161  0.2111,0.2088,0.2114   \n",
-       "1  0.6473,0.6438,0.6316    0.848833    0.012154  0.8606,0.8538,0.8321   \n",
-       "2   0.2432,0.248,0.2407    0.281100    0.003884  0.2797,0.2864,0.2772   \n",
-       "3  1.2586,1.2494,1.2555    1.500067    0.030415   1.5267,1.516,1.4575   \n",
-       "4  0.3756,0.3881,0.3963    0.434233    0.008344  0.4234,0.4356,0.4437   \n",
-       "\n",
-       "  Jnrdiff_Mean  Jnrdiff_Std                 Jnrdiff_Values  \n",
-       "0    11.852941     0.167575   11.75225,11.717496,12.089077  \n",
-       "1    32.440363     0.506785      32.952263,32.618826,31.75  \n",
-       "2    15.218733     0.197987  15.008224,15.483871,15.164105  \n",
-       "3    19.576563     2.465418      21.301446,21.338242,16.09  \n",
-       "4    12.308685     0.316430  12.726305,12.239114,11.960636  \n",
+       "   Lane  Field_Aging  ...  Jnrdiff_Std                 Jnrdiff_Values\n",
+       "0     1      0-Month  ...     0.167575   11.75225,11.717496,12.089077\n",
+       "1     1  Tank binder  ...     0.506785      32.952263,32.618826,31.75\n",
+       "2     2      0-Month  ...     0.197987  15.008224,15.483871,15.164105\n",
+       "3     2  Tank binder  ...     2.465418      21.301446,21.338242,16.09\n",
+       "4     3      0-Month  ...     0.316430  12.726305,12.239114,11.960636\n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "564ed7b3",
    "metadata": {},
    "outputs": [
@@ -532,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "5e8303c1",
    "metadata": {},
    "outputs": [
@@ -641,7 +607,7 @@
        "9   L10             H                  H"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "921c7ac4",
    "metadata": {},
    "outputs": [
@@ -736,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "62eb0c43",
    "metadata": {},
    "outputs": [
@@ -845,7 +811,7 @@
        "9   L10             H                  I"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "5fa6dc1d",
    "metadata": {},
    "outputs": [
@@ -940,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "fc6f1c46",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1015,7 @@
        "9   L10             C                  E"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "25614acd",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "6efde238",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "042ef08c",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1290,7 @@
        "9   L10           C,F                  J"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "8a0ef8ae",
    "metadata": {},
    "outputs": [
@@ -1417,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "04b656da",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1492,7 @@
        "9   L10             H                  G"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "223b788e",
    "metadata": {},
    "outputs": [
@@ -1631,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "eb4da92f",
    "metadata": {},
    "outputs": [
@@ -1713,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "3e202b9b",
    "metadata": {},
    "outputs": [
@@ -1738,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "07501950",
    "metadata": {},
    "outputs": [
@@ -1770,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "id": "b65ee1ae",
    "metadata": {},
    "outputs": [],
