--- a/Task03_Binder_FrequencySweep.ipynb
+++ b/Task03_Binder_FrequencySweep.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e4ad7164",
    "metadata": {},
    "outputs": [],
@@ -30,19 +30,19 @@
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import curve_fit\n",
-    "from Statistical_Analysis import Tukey_Grouping\n",
-    "from Binder_FrequencySweep_Analysis import FreeShift_GordonShaw1994, Fit_MC_ChristensenAndersonMarasteanu, Fit_MC_ChristensenAnderson"
+    "from scripts.Statistical_Analysis import Tukey_Grouping\n",
+    "from scripts.Binder_FrequencySweep_Analysis import FreeShift_GordonShaw1994, Fit_MC_ChristensenAndersonMarasteanu, Fit_MC_ChristensenAnderson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "54d665b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# User input variables. \n",
-    "MainDataFileName = './Data/Data.xlsx'\n",
+    "MainDataFileName = './data/Data.xlsx'\n",
     "OutputDir        = '../_Figures'"
    ]
   },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a573f39d",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1c533901",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "451b7ba2",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "26994a6e",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "432e0e5e",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Farhad.Abdollahi.ctr\\AppData\\Local\\Temp\\ipykernel_37408\\2041066168.py:2: RuntimeWarning: invalid value encountered in power\n",
+      "C:\\Users\\Farhad.Abdollahi.ctr\\AppData\\Local\\Temp\\ipykernel_21344\\2041066168.py:2: RuntimeWarning: invalid value encountered in power\n",
       "  CrossModel = lambda w, ZSV, K, m: np.log10((10 ** ZSV) / (1 + (K * w) ** m))      # ZSV and |η*| are in log scale.\n"
      ]
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6977fe84",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "aaaa70c2",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a9a1d23d",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1185e6a9",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "55518e74",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "3f30c12b",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "90389668",
    "metadata": {},
    "outputs": [],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "204f8db4",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
        "9   L10     D  E,F,G  E,F,G"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "081195bf",
    "metadata": {},
    "outputs": [
@@ -911,7 +911,7 @@
        "9   L10  B,C,D,E    B,C,D    D,E,F"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "072db126",
    "metadata": {},
    "outputs": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "419f4041",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "319ef7b8",
    "metadata": {},
    "outputs": [],
