--- a/Task04_CorrelationStudy.ipynb
+++ b/Task04_CorrelationStudy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "498bd1db",
    "metadata": {},
    "outputs": [],
@@ -29,14 +29,12 @@
     "import numpy as np\n",
     "import pandas as pd \n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from Statistical_Analysis import Tukey_Grouping\n",
-    "from scipy.stats import ttest_ind, t"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "14a1689e",
    "metadata": {},
    "outputs": [],
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "44fda7f1",
    "metadata": {},
    "outputs": [
@@ -178,7 +176,7 @@
        "4  0.2864  15.483871  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "cda88e41",
    "metadata": {},
    "outputs": [
@@ -372,7 +370,7 @@
        "4    2.791937  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "74c7bbf2",
    "metadata": {},
    "outputs": [
@@ -606,7 +604,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "9891cac4",
    "metadata": {},
    "outputs": [
